; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/extr_cnic.c_cnic_service_bnx2_msix.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/extr_cnic.c_cnic_service_bnx2_msix.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cnic_dev = type { %struct.cnic_local* }
%struct.cnic_local = type { i32, i32 }

@BNX2_PCICFG_INT_ACK_CMD = common dso_local global i32 0, align 4
@BNX2_PCICFG_INT_ACK_CMD_INDEX_VALID = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i64)* @cnic_service_bnx2_msix to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @cnic_service_bnx2_msix(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca %struct.cnic_dev*, align 8
  %4 = alloca %struct.cnic_local*, align 8
  store i64 %0, i64* %2, align 8
  %5 = load i64, i64* %2, align 8
  %6 = inttoptr i64 %5 to %struct.cnic_dev*
  store %struct.cnic_dev* %6, %struct.cnic_dev** %3, align 8
  %7 = load %struct.cnic_dev*, %struct.cnic_dev** %3, align 8
  %8 = getelementptr inbounds %struct.cnic_dev, %struct.cnic_dev* %7, i32 0, i32 0
  %9 = load %struct.cnic_local*, %struct.cnic_local** %8, align 8
  store %struct.cnic_local* %9, %struct.cnic_local** %4, align 8
  %10 = load %struct.cnic_dev*, %struct.cnic_dev** %3, align 8
  %11 = call i32 @cnic_service_bnx2_queues(%struct.cnic_dev* %10)
  %12 = load %struct.cnic_local*, %struct.cnic_local** %4, align 8
  %13 = getelementptr inbounds %struct.cnic_local, %struct.cnic_local* %12, i32 0, i32 0
  store i32 %11, i32* %13, align 4
  %14 = load %struct.cnic_dev*, %struct.cnic_dev** %3, align 8
  %15 = load i32, i32* @BNX2_PCICFG_INT_ACK_CMD, align 4
  %16 = load %struct.cnic_local*, %struct.cnic_local** %4, align 8
  %17 = getelementptr inbounds %struct.cnic_local, %struct.cnic_local* %16, i32 0, i32 1
  %18 = load i32, i32* %17, align 4
  %19 = load i32, i32* @BNX2_PCICFG_INT_ACK_CMD_INDEX_VALID, align 4
  %20 = or i32 %18, %19
  %21 = load %struct.cnic_local*, %struct.cnic_local** %4, align 8
  %22 = getelementptr inbounds %struct.cnic_local, %struct.cnic_local* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 4
  %24 = or i32 %20, %23
  %25 = call i32 @CNIC_WR(%struct.cnic_dev* %14, i32 %15, i32 %24)
  ret void
}

declare dso_local i32 @cnic_service_bnx2_queues(%struct.cnic_dev*) #1

declare dso_local i32 @CNIC_WR(%struct.cnic_dev*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
